# CIS6600-MayaPlugins

./: .gitignore
CIS6600-HW02/: README.md  plugin_dialog.mel
CIS6600-HW02/LSystemMaya/: CMakeLists.txt
CIS6600-HW04/: CMakeLists.txt  readme.md
CIS6600-HW04/src/: LSYSTEMPlugin.C  LSYSTEMPlugin.h  LSystem.cpp
CIS6600-tex-templates/: seminal_paper.tex
CIS6600-wk02-SeminalReview/Reivew-wk02-02-Hardware/: CIS6600_SeminalReview_Hardware.tex
CIS6600-wk02-SeminalReview/Review-wk02-01-ProcCity/: CIS6600_SeminalReview_ProcGen.tex
CIS6600-wk07-Sig-Review-01/: CIS6600_SigReview_wk07.doc
CIS6600-wk07-Sig-Review-02/: CIS6600_SigReview_wk07_02.doc
CIS6600-wk08-Sig-Review-03/: CIS6600_SigReview_wk08_03.doc
CIS6600-wk11-WeeklyReport/: CIS6600_weekly_progress_wk11.docx
CIS6600-wk12-Sig-Review-09/: CIS6600_SigReview_wk12_09.doc  CIS6600_SigReview_wk12_09.docx  CIS6600_SigReview_wk12_09.tex
CIS6600-wk12-WeeklyReport/: CIS6600_weekly_progress_wk12.docx
CIS6600-wk13-Sig-Review-10/: CIS6600_SigReview_wk13_10.doc
CIS6600-wk13-Sig-Review-11/: CIS6600_SigReview_wk13_11.doc
CIS6600-wk13-WeeklyReport/: CIS6600_weekly_progress_wk13.docx
CIS6600-wk14-Sig-Review-12/: CIS6600_SigReview_wk14_12.doc
CIS6600-wk14-Sig-Review-13/: CIS6600_SigReview_wk14_13.doc
CIS6600-wk14-WeeklyReport/: CIS6600_weekly_progress_wk14.docx
CIS6600-wk15-WeekReport/: CIS6600_weekly_progress_wk15.docx
CIS6600_proj01_IntroToMaya/CIS6600-HW01-HelloMaya-CMake/: CMakeLists.txt
CIS6600_proj01_IntroToMaya/CIS6600-HW01-HelloMaya-CMake/src/: hello_maya.cpp
HW4 Cmake/HW4/: CMakeLists.txt
(+32 files in other folders)
